--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,9 @@ verify_ssl = true
 
 [packages]
 django = "*"
-black = "*"
+djangorestframework = "*"
+django-cors-headers = "*"
+django-webpack-loader = "*"
 
 [requires]
 python_version = "3.7"
