--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ verify_ssl = true
 django = "*"
 django-cors-headers = "*"
 django-webpack-loader = "*"
+django-heroku = "*"
+gunicorn = "*"
+whitenoise = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
