--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+/static/assets
 
 # misc
 .DS_Store
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+webpack-stats.json
 
 
 npm-debug.log*
