--- a/frontend/node.js/package.json
+++ b/frontend/node.js/package.json
@@ -17,24 +17,24 @@
   "license": "ISC",
   "dependencies": {
     "js-cookie": "^2.2.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "regenerator-runtime": "^0.13.3",
+    "materialize-css": "^1.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.5",
     "watch": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.4.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.2",
-    "webpack": "^4.41.4",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1",
     "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   },
   "engines": {
