Can edit recipes. Edit recpe page is react generated.

--- a/Pipfile
+++ b/Pipfile
@@ -14,7 +14,7 @@ gunicorn = "*"
 whitenoise = "*"
 python-dotenv = "*"
 wheel = "*"
-pillow = "*"
+cookbook = {editable = true,path = "."}
 
 [requires]
 python_version = "3.7"
